# harness-docs

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  README.md  biome.json  compose.yaml  package.json  pnpm-lock.yaml  product-doc-harness-seed.yaml  tsconfig.base.json
.github/: REPOSITORY_RULES.md  pull_request_template.md
.github/workflows/: ci.yml  docs-deploy.yml  format.yml
.husky/: pre-commit  pre-push
apps/api/: .env.example  AGENTS.md  README.md  package.json  tsconfig.json
apps/api/docs/: implementation-status.md  server-side-auth-and-authorization.md
apps/api/scripts/: ensureDemoWorkspace.ts  seedDemoWorkspace.ts
apps/api/src/: client.ts  index.ts  server.ts
apps/desktop/: .env.example  AGENTS.md  README.md  Untitled  components.json  index.html  package.json  seed.yaml  tsconfig.json  vite.config.ts
apps/desktop/docs/: local-development.md
apps/desktop/src/: App.tsx  (+6 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: AGENTS.md  faq.md  for-who.md  how-it-works.md  index.md  package.json  problems-we-solve.md  product-doc-harness-prd.md  product-doc-harness-seed.yaml  product-overview.md
docs/.vitepress/: config.mjs
docs/guide/: architecture.md  authentication.md  domain-model.md  getting-started.md  server-side-auth-and-authorization.md
docs/reference/: document-types.md  implementation-status.md  lovable-ui-ssot.md  packages.md  spec-sources.md
scripts/: check-format.mjs  dev-all.sh  shadcn-mcp.mjs
(+228 files in other folders)
