[package]
name = "harness-docs"
version = "0.1.0"
description = "Harness Docs desktop foundation"
authors = ["Codex"]
edition = "2021"

[lib]
name = "harness_docs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.10.1", features = [] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
